// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Example Proof: vanilla-spa-i18n-baked > should match Development snapshots (Identity keys) > vanilla-spa-i18n-baked/dev-transforms/index.html 1`] = `
"<!doctype html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Redirecting...</title>
    <script id="zintl-multiplex-redirect">
      (function() {
        try {
          const lang = (navigator.language || 'en').split('-')[0];
          const supported = ["en","ar","es","zh"];
          const target = supported.includes(lang) ? lang : 'en';
          window.location.replace('/' + target + '/');
        } catch (e) {
          window.location.replace('/en/');
        }
      })();
    </script>
  </head>
  <body>
  </body>
</html>"
`;

exports[`Example Proof: vanilla-spa-i18n-baked > should match Development snapshots (Identity keys) > vanilla-spa-i18n-baked/dev-transforms/src/counter.ts 1`] = `
"import { _t } from "zintl/internal";
import _zintl_mgr_b_src_main from "virtual:zintl/manager/none/entry:b_src_main";
export function setupCounter(element: HTMLButtonElement) {
  let counter = 0;
  const setCounter = (count: number) => {
    counter = count;
    element.innerHTML = _t("Count is {counter}", { counter: counter }, { _mgr: _zintl_mgr_b_src_main, _bId: "b_src_counter_setupCounter" });
  };
  element.addEventListener("click", () => setCounter(counter + 1));
  setCounter(0);
}"
`;

exports[`Example Proof: vanilla-spa-i18n-baked > should match Development snapshots (Identity keys) > vanilla-spa-i18n-baked/dev-transforms/src/main.ts 1`] = `
"import { _t, loadI18nInstance } from "zintl/internal";
import _zintl_mgr_b_src_main from "virtual:zintl/manager/none/entry:b_src_main";
import "./style.css";
import typescriptLogo from "./assets/typescript.svg";
import viteLogo from "./assets/vite.svg";
import heroImg from "./assets/hero.png";


import { setupCounter } from "./counter.ts";
import { setupSwitcher } from "./switcher.ts";

await loadI18nInstance({ loaders: { ["b_src_main"]: _zintl_mgr_b_src_main.loader } });
document.querySelector<HTMLDivElement>("#app")!.innerHTML = \`
<section id="header">
  <div id="switcher" class="switcher"></div>
  <div class="vertical-ticks"></div>
  <div class="icon-border"><svg class="icon" role="img" aria-hidden="true"><use href="/icons.svg#translate-icon"></use></svg></div>
</section>

<div class="ticks"></div>

<section id="center">
  <div class="hero">
    <img src="\${heroImg}" class="base" width="170" height="179">
    <img src="\${typescriptLogo}" class="framework" alt="TypeScript logo"/>
    <img src="\${viteLogo}" class="vite" alt="Vite logo" />
  </div>
  <div>
    <h1>\${_t("Get started", { _mgr: _zintl_mgr_b_src_main, _bId: "b_src_main" })}</h1>
    <p>\${_t("Edit", { _mgr: _zintl_mgr_b_src_main, _bId: "b_src_main" })} <!-- @zintl-ignore --> <code>src/main.ts</code> \${_t("and save to test", { _mgr: _zintl_mgr_b_src_main, _bId: "b_src_main" })} <!-- @zintl-ignore --> <code>HMR</code></p>
  </div>
  <button id="counter" type="button" class="counter"></button>
</section>

<div class="ticks"></div>

<section id="next-steps">
  <div id="docs">
    <svg class="icon" role="presentation" aria-hidden="true"><use href="/icons.svg#documentation-icon"></use></svg>
    <h2>\${_t("Documentation", { _mgr: _zintl_mgr_b_src_main, _bId: "b_src_main" })}</h2>
    <p>\${_t("Your questions, answered", { _mgr: _zintl_mgr_b_src_main, _bId: "b_src_main" })}</p>
    <ul>
      <li>
        <a href="https://vite.dev/" target="_blank">
          <img class="logo" src="\${viteLogo}" alt="" />
          \${_t("Explore Vite", { _mgr: _zintl_mgr_b_src_main, _bId: "b_src_main" })}
        </a>
      </li>
      <li>
        <a href="https://www.typescriptlang.org" target="_blank">
          <img class="button-icon" src="\${typescriptLogo}" alt="">
          \${_t("Learn more", { _mgr: _zintl_mgr_b_src_main, _bId: "b_src_main" })}
        </a>
      </li>
    </ul>
  </div>
  <div id="social">
    <svg class="icon" role="presentation" aria-hidden="true"><use href="/icons.svg#social-icon"></use></svg>
    <h2>\${_t("Connect with us", { _mgr: _zintl_mgr_b_src_main, _bId: "b_src_main" })}</h2>
    <p>\${_t("Join the Vite community", { _mgr: _zintl_mgr_b_src_main, _bId: "b_src_main" })}</p>
    <!-- @zintl-ignore -->
    <ul>
      <li><a href="https://github.com/vitejs/vite" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="/icons.svg#github-icon"></use></svg>GitHub</a></li>
      <li><a href="https://chat.vite.dev/" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="/icons.svg#discord-icon"></use></svg>Discord</a></li>
      <li><a href="https://x.com/vite_js" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="/icons.svg#x-icon"></use></svg>X.com</a></li>
      <li><a href="https://bsky.app/profile/vite.dev" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="/icons.svg#bluesky-icon"></use></svg>Bluesky</a></li>
    </ul>
  </div>
</section>

<div class="ticks"></div>
<section id="spacer"></section>
\`;

setupCounter(document.querySelector<HTMLButtonElement>("#counter")!);
setupSwitcher(document.querySelector<HTMLDivElement>("#switcher")!);"
`;

exports[`Example Proof: vanilla-spa-i18n-baked > should match Development snapshots (Identity keys) > vanilla-spa-i18n-baked/dev-transforms/src/switcher.ts 1`] = `
"export function setupSwitcher(element: HTMLElement) {
  const lang = (window.location.pathname.split("/")[1] as any) || "en";

  const locales = [
    { id: "en", name: "English" },
    { id: "ar", name: "العربية" },
    { id: "es", name: "Español" },
    { id: "zh", name: "中文" },
  ];

  element.innerHTML = locales
    .map(
      (l) => \`
    <button data-lang="\${l.id}" class="\${lang === l.id ? "active" : ""}">
      <a href="/\${l.id}/">\${l.name}</a>
    </button>
  \`,
    )
    .join("");

  // element.querySelectorAll("button").forEach((btn) => {
  //   btn.addEventListener("click", () => {
  //     const newLang = (btn as HTMLElement).dataset.lang!;
  //     window.history.pushState({}, "", \`/\${newLang}\`);
  //   });
  // });
}"
`;

exports[`Example Proof: vanilla-spa-i18n-baked > should match Development snapshots (Identity keys) > vanilla-spa-i18n-baked/dev-transforms/virtual:zintl/content/ar/entry:b_src_main 1`] = `
"export default {
    "b_src_main": {
      "Get started": "ابدأ الآن",
      "Edit": "عدّل",
      "and save to test": "واحفظ لاختبار",
      "Documentation": "وثائق",
      "Your questions, answered": "إجابات لأسئلتك",
      "Explore Vite": "استكشف Vite",
      "Learn more": "تعرف على المزيد",
      "Connect with us": "تواصل معنا",
      "Join the Vite community": "انضم إلى مجتمع Vite",
    },
    "b_src_counter_setupCounter": {
      "Count is {counter}": (params) => {
    const { counter } = params;
    return \`العدد هو \${params['counter']}\`;
  },
    },
  };"
`;

exports[`Example Proof: vanilla-spa-i18n-baked > should match Development snapshots (Identity keys) > vanilla-spa-i18n-baked/dev-transforms/virtual:zintl/content/es/entry:b_src_main 1`] = `
"export default {
    "b_src_main": {
      "Get started": "Empezar",
      "Edit": "Editar",
      "and save to test": "y guarda para probar",
      "Documentation": "Documentación",
      "Your questions, answered": "Tus preguntas, respondidas",
      "Explore Vite": "Explorar Vite",
      "Learn more": "Leer más",
      "Connect with us": "Conéctate con nosotros",
      "Join the Vite community": "Únete a la comunidad de Vite",
    },
    "b_src_counter_setupCounter": {
      "Count is {counter}": (params) => {
    const { counter } = params;
    return \`La cuenta es \${params['counter']}\`;
  },
    },
  };"
`;

exports[`Example Proof: vanilla-spa-i18n-baked > should match Development snapshots (Identity keys) > vanilla-spa-i18n-baked/dev-transforms/virtual:zintl/content/zh/entry:b_src_main 1`] = `
"export default {
    "b_src_main": {
      "Get started": "开始使用",
      "Edit": "编辑",
      "and save to test": "并保存以测试",
      "Documentation": "文档",
      "Your questions, answered": "你的问题，已有答案",
      "Explore Vite": "探索 Vite",
      "Learn more": "了解更多",
      "Connect with us": "联系我们",
      "Join the Vite community": "加入 Vite 社区",
    },
    "b_src_counter_setupCounter": {
      "Count is {counter}": (params) => {
    const { counter } = params;
    return \`计数为 \${params['counter']}\`;
  },
    },
  };"
`;

exports[`Example Proof: vanilla-spa-i18n-baked > should match Development snapshots (Identity keys) > vanilla-spa-i18n-baked/dev-transforms/virtual:zintl/manager/none/entry:b_src_main 1`] = `
"export default { id: "b_src_main", loader: (locale) => {
      switch(locale) { 
        case "en":
          return {
    "b_src_main": {
      "Get started": "Get started",
      "Edit": "Edit",
      "and save to test": "and save to test",
      "Documentation": "Documentation",
      "Your questions, answered": "Your questions, answered",
      "Explore Vite": "Explore Vite",
      "Learn more": "Learn more",
      "Connect with us": "Connect with us",
      "Join the Vite community": "Join the Vite community",
    },
    "b_src_counter_setupCounter": {
      "Count is {counter}": (params) => {
    const { counter } = params;
    return \`Count is \${params['counter']}\`;
  },
    },
  };
                case "ar":
          return import("virtual:zintl/content/ar/entry:b_src_main").then(m => m.default);
        case "es":
          return import("virtual:zintl/content/es/entry:b_src_main").then(m => m.default);
        case "zh":
          return import("virtual:zintl/content/zh/entry:b_src_main").then(m => m.default);
        default: return {};
      }
    } };"
`;

exports[`Example Proof: vanilla-spa-i18n-baked > should match Final Production Build (dist) snapshots > vanilla-spa-i18n-baked/dist/ar/index.html 1`] = `
"<!doctype html>
<html lang="ar" dir="rtl">
  <head>
    <meta charset="UTF-8" />
    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>زينتل | مثال تطبيق الصفحة الواحدة مخبوز متعدد اللغات</title>
    <script type="module" crossorigin src="/assets/ar/index-C09DrW-Y.js"></script>
    <link rel="modulepreload" crossorigin href="/assets/modulepreload-polyfill-BxR_cmXS.js">
    <link rel="stylesheet" crossorigin href="/assets/index-CDkl1zVr.css">
  </head>
  <body>
    <div id="app"></div>
  </body>
</html>
"
`;

exports[`Example Proof: vanilla-spa-i18n-baked > should match Final Production Build (dist) snapshots > vanilla-spa-i18n-baked/dist/assets/ar/index-C09DrW-Y.js 1`] = `
"import"../modulepreload-polyfill-BxR_cmXS.js";var e=\`data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20aria-hidden='true'%20width='32'%20height='32'%20viewBox='0%200%20256%20256'%3e%3cpath%20fill='%23007ACC'%20d='M0%20128v128h256V0H0z'/%3e%3cpath%20fill='%23FFF'%20d='m56.612%20128.85l-.081%2010.483h33.32v94.68h23.568v-94.68h33.321v-10.28c0-5.69-.122-10.444-.284-10.566c-.122-.162-20.4-.244-44.983-.203l-44.74.122l-.121%2010.443Zm149.955-10.742c6.501%201.625%2011.459%204.51%2016.01%209.224c2.357%202.52%205.851%207.111%206.136%208.208c.08.325-11.053%207.802-17.798%2011.988c-.244.162-1.22-.894-2.317-2.52c-3.291-4.795-6.745-6.867-12.028-7.233c-7.76-.528-12.759%203.535-12.718%2010.321c0%201.992.284%203.17%201.097%204.795c1.707%203.536%204.876%205.649%2014.832%209.956c18.326%207.883%2026.168%2013.084%2031.045%2020.48c5.445%208.249%206.664%2021.415%202.966%2031.208c-4.063%2010.646-14.14%2017.879-28.323%2020.276c-4.388.772-14.79.65-19.504-.203c-10.28-1.828-20.033-6.908-26.047-13.572c-2.357-2.6-6.949-9.387-6.664-9.874c.122-.163%201.178-.813%202.356-1.504c1.138-.65%205.446-3.129%209.509-5.485l7.355-4.267l1.544%202.276c2.154%203.29%206.867%207.801%209.712%209.305c8.167%204.307%2019.383%203.698%2024.909-1.26c2.357-2.153%203.332-4.388%203.332-7.68c0-2.966-.366-4.266-1.91-6.501c-1.99-2.845-6.054-5.242-17.595-10.24c-13.206-5.69-18.895-9.224-24.096-14.832c-3.007-3.25-5.852-8.452-7.03-12.8c-.975-3.617-1.22-12.678-.447-16.335c2.723-12.76%2012.353-21.659%2026.25-24.3c4.51-.853%2014.994-.528%2019.424.569Z'/%3e%3c/svg%3e\`,t=\`/assets/vite-BF8QNONU.svg?zintl-multiplex=ar\`,n=\`/assets/hero-CLDdwZDr.png?zintl-multiplex=ar\`;function r(e){let t=0,n=n=>{t=n,e.innerHTML=\`العدد هو \${t}\`};e.addEventListener(\`click\`,()=>n(t+1)),n(0)}function i(e){let t=window.location.pathname.split(\`/\`)[1]||\`en\`;e.innerHTML=[{id:\`en\`,name:\`English\`},{id:\`ar\`,name:\`العربية\`},{id:\`es\`,name:\`Español\`},{id:\`zh\`,name:\`中文\`}].map(e=>\`
    <button data-lang="\${e.id}" class="\${t===e.id?\`active\`:\`\`}">
      <a href="/\${e.id}/">\${e.name}</a>
    </button>
  \`).join(\`\`)}document.querySelector(\`#app\`).innerHTML=\`
<section id="header">
  <div id="switcher" class="switcher"></div>
  <div class="vertical-ticks"></div>
  <div class="icon-border"><svg class="icon" role="img" aria-hidden="true"><use href="/icons.svg#translate-icon"></use></svg></div>
</section>

<div class="ticks"></div>

<section id="center">
  <div class="hero">
    <img src="\${n}" class="base" width="170" height="179">
    <img src="\${e}" class="framework" alt="TypeScript logo"/>
    <img src="\${t}" class="vite" alt="Vite logo" />
  </div>
  <div>
    <h1>ابدأ الآن</h1>
    <p>عدّل <!-- @zintl-ignore --> <code>src/main.ts</code> واحفظ لاختبار <!-- @zintl-ignore --> <code>HMR</code></p>
  </div>
  <button id="counter" type="button" class="counter"></button>
</section>

<div class="ticks"></div>

<section id="next-steps">
  <div id="docs">
    <svg class="icon" role="presentation" aria-hidden="true"><use href="/icons.svg#documentation-icon"></use></svg>
    <h2>وثائق</h2>
    <p>إجابات لأسئلتك</p>
    <ul>
      <li>
        <a href="https://vite.dev/" target="_blank">
          <img class="logo" src="\${t}" alt="" />
          استكشف Vite
        </a>
      </li>
      <li>
        <a href="https://www.typescriptlang.org" target="_blank">
          <img class="button-icon" src="\${e}" alt="">
          تعرف على المزيد
        </a>
      </li>
    </ul>
  </div>
  <div id="social">
    <svg class="icon" role="presentation" aria-hidden="true"><use href="/icons.svg#social-icon"></use></svg>
    <h2>تواصل معنا</h2>
    <p>انضم إلى مجتمع Vite</p>
    <!-- @zintl-ignore -->
    <ul>
      <li><a href="https://github.com/vitejs/vite" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="/icons.svg#github-icon"></use></svg>GitHub</a></li>
      <li><a href="https://chat.vite.dev/" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="/icons.svg#discord-icon"></use></svg>Discord</a></li>
      <li><a href="https://x.com/vite_js" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="/icons.svg#x-icon"></use></svg>X.com</a></li>
      <li><a href="https://bsky.app/profile/vite.dev" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="/icons.svg#bluesky-icon"></use></svg>Bluesky</a></li>
    </ul>
  </div>
</section>

<div class="ticks"></div>
<section id="spacer"></section>
\`,r(document.querySelector(\`#counter\`)),i(document.querySelector(\`#switcher\`));"
`;

exports[`Example Proof: vanilla-spa-i18n-baked > should match Final Production Build (dist) snapshots > vanilla-spa-i18n-baked/dist/assets/en/index-D1DIQBFy.js 1`] = `
"import"../modulepreload-polyfill-BxR_cmXS.js";var e=\`data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20aria-hidden='true'%20width='32'%20height='32'%20viewBox='0%200%20256%20256'%3e%3cpath%20fill='%23007ACC'%20d='M0%20128v128h256V0H0z'/%3e%3cpath%20fill='%23FFF'%20d='m56.612%20128.85l-.081%2010.483h33.32v94.68h23.568v-94.68h33.321v-10.28c0-5.69-.122-10.444-.284-10.566c-.122-.162-20.4-.244-44.983-.203l-44.74.122l-.121%2010.443Zm149.955-10.742c6.501%201.625%2011.459%204.51%2016.01%209.224c2.357%202.52%205.851%207.111%206.136%208.208c.08.325-11.053%207.802-17.798%2011.988c-.244.162-1.22-.894-2.317-2.52c-3.291-4.795-6.745-6.867-12.028-7.233c-7.76-.528-12.759%203.535-12.718%2010.321c0%201.992.284%203.17%201.097%204.795c1.707%203.536%204.876%205.649%2014.832%209.956c18.326%207.883%2026.168%2013.084%2031.045%2020.48c5.445%208.249%206.664%2021.415%202.966%2031.208c-4.063%2010.646-14.14%2017.879-28.323%2020.276c-4.388.772-14.79.65-19.504-.203c-10.28-1.828-20.033-6.908-26.047-13.572c-2.357-2.6-6.949-9.387-6.664-9.874c.122-.163%201.178-.813%202.356-1.504c1.138-.65%205.446-3.129%209.509-5.485l7.355-4.267l1.544%202.276c2.154%203.29%206.867%207.801%209.712%209.305c8.167%204.307%2019.383%203.698%2024.909-1.26c2.357-2.153%203.332-4.388%203.332-7.68c0-2.966-.366-4.266-1.91-6.501c-1.99-2.845-6.054-5.242-17.595-10.24c-13.206-5.69-18.895-9.224-24.096-14.832c-3.007-3.25-5.852-8.452-7.03-12.8c-.975-3.617-1.22-12.678-.447-16.335c2.723-12.76%2012.353-21.659%2026.25-24.3c4.51-.853%2014.994-.528%2019.424.569Z'/%3e%3c/svg%3e\`,t=\`/assets/vite-BF8QNONU.svg?zintl-multiplex=en\`,n=\`/assets/hero-CLDdwZDr.png?zintl-multiplex=en\`;function r(e){let t=0,n=n=>{t=n,e.innerHTML=\`Count is \${t}\`};e.addEventListener(\`click\`,()=>n(t+1)),n(0)}function i(e){let t=window.location.pathname.split(\`/\`)[1]||\`en\`;e.innerHTML=[{id:\`en\`,name:\`English\`},{id:\`ar\`,name:\`العربية\`},{id:\`es\`,name:\`Español\`},{id:\`zh\`,name:\`中文\`}].map(e=>\`
    <button data-lang="\${e.id}" class="\${t===e.id?\`active\`:\`\`}">
      <a href="/\${e.id}/">\${e.name}</a>
    </button>
  \`).join(\`\`)}document.querySelector(\`#app\`).innerHTML=\`
<section id="header">
  <div id="switcher" class="switcher"></div>
  <div class="vertical-ticks"></div>
  <div class="icon-border"><svg class="icon" role="img" aria-hidden="true"><use href="/icons.svg#translate-icon"></use></svg></div>
</section>

<div class="ticks"></div>

<section id="center">
  <div class="hero">
    <img src="\${n}" class="base" width="170" height="179">
    <img src="\${e}" class="framework" alt="TypeScript logo"/>
    <img src="\${t}" class="vite" alt="Vite logo" />
  </div>
  <div>
    <h1>Get started</h1>
    <p>Edit <!-- @zintl-ignore --> <code>src/main.ts</code> and save to test <!-- @zintl-ignore --> <code>HMR</code></p>
  </div>
  <button id="counter" type="button" class="counter"></button>
</section>

<div class="ticks"></div>

<section id="next-steps">
  <div id="docs">
    <svg class="icon" role="presentation" aria-hidden="true"><use href="/icons.svg#documentation-icon"></use></svg>
    <h2>Documentation</h2>
    <p>Your questions, answered</p>
    <ul>
      <li>
        <a href="https://vite.dev/" target="_blank">
          <img class="logo" src="\${t}" alt="" />
          Explore Vite
        </a>
      </li>
      <li>
        <a href="https://www.typescriptlang.org" target="_blank">
          <img class="button-icon" src="\${e}" alt="">
          Learn more
        </a>
      </li>
    </ul>
  </div>
  <div id="social">
    <svg class="icon" role="presentation" aria-hidden="true"><use href="/icons.svg#social-icon"></use></svg>
    <h2>Connect with us</h2>
    <p>Join the Vite community</p>
    <!-- @zintl-ignore -->
    <ul>
      <li><a href="https://github.com/vitejs/vite" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="/icons.svg#github-icon"></use></svg>GitHub</a></li>
      <li><a href="https://chat.vite.dev/" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="/icons.svg#discord-icon"></use></svg>Discord</a></li>
      <li><a href="https://x.com/vite_js" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="/icons.svg#x-icon"></use></svg>X.com</a></li>
      <li><a href="https://bsky.app/profile/vite.dev" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="/icons.svg#bluesky-icon"></use></svg>Bluesky</a></li>
    </ul>
  </div>
</section>

<div class="ticks"></div>
<section id="spacer"></section>
\`,r(document.querySelector(\`#counter\`)),i(document.querySelector(\`#switcher\`));"
`;

exports[`Example Proof: vanilla-spa-i18n-baked > should match Final Production Build (dist) snapshots > vanilla-spa-i18n-baked/dist/assets/es/index-Bw8giZtc.js 1`] = `
"import"../modulepreload-polyfill-BxR_cmXS.js";var e=\`data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20aria-hidden='true'%20width='32'%20height='32'%20viewBox='0%200%20256%20256'%3e%3cpath%20fill='%23007ACC'%20d='M0%20128v128h256V0H0z'/%3e%3cpath%20fill='%23FFF'%20d='m56.612%20128.85l-.081%2010.483h33.32v94.68h23.568v-94.68h33.321v-10.28c0-5.69-.122-10.444-.284-10.566c-.122-.162-20.4-.244-44.983-.203l-44.74.122l-.121%2010.443Zm149.955-10.742c6.501%201.625%2011.459%204.51%2016.01%209.224c2.357%202.52%205.851%207.111%206.136%208.208c.08.325-11.053%207.802-17.798%2011.988c-.244.162-1.22-.894-2.317-2.52c-3.291-4.795-6.745-6.867-12.028-7.233c-7.76-.528-12.759%203.535-12.718%2010.321c0%201.992.284%203.17%201.097%204.795c1.707%203.536%204.876%205.649%2014.832%209.956c18.326%207.883%2026.168%2013.084%2031.045%2020.48c5.445%208.249%206.664%2021.415%202.966%2031.208c-4.063%2010.646-14.14%2017.879-28.323%2020.276c-4.388.772-14.79.65-19.504-.203c-10.28-1.828-20.033-6.908-26.047-13.572c-2.357-2.6-6.949-9.387-6.664-9.874c.122-.163%201.178-.813%202.356-1.504c1.138-.65%205.446-3.129%209.509-5.485l7.355-4.267l1.544%202.276c2.154%203.29%206.867%207.801%209.712%209.305c8.167%204.307%2019.383%203.698%2024.909-1.26c2.357-2.153%203.332-4.388%203.332-7.68c0-2.966-.366-4.266-1.91-6.501c-1.99-2.845-6.054-5.242-17.595-10.24c-13.206-5.69-18.895-9.224-24.096-14.832c-3.007-3.25-5.852-8.452-7.03-12.8c-.975-3.617-1.22-12.678-.447-16.335c2.723-12.76%2012.353-21.659%2026.25-24.3c4.51-.853%2014.994-.528%2019.424.569Z'/%3e%3c/svg%3e\`,t=\`/assets/vite-BF8QNONU.svg?zintl-multiplex=es\`,n=\`/assets/hero-CLDdwZDr.png?zintl-multiplex=es\`;function r(e){let t=0,n=n=>{t=n,e.innerHTML=\`La cuenta es \${t}\`};e.addEventListener(\`click\`,()=>n(t+1)),n(0)}function i(e){let t=window.location.pathname.split(\`/\`)[1]||\`en\`;e.innerHTML=[{id:\`en\`,name:\`English\`},{id:\`ar\`,name:\`العربية\`},{id:\`es\`,name:\`Español\`},{id:\`zh\`,name:\`中文\`}].map(e=>\`
    <button data-lang="\${e.id}" class="\${t===e.id?\`active\`:\`\`}">
      <a href="/\${e.id}/">\${e.name}</a>
    </button>
  \`).join(\`\`)}document.querySelector(\`#app\`).innerHTML=\`
<section id="header">
  <div id="switcher" class="switcher"></div>
  <div class="vertical-ticks"></div>
  <div class="icon-border"><svg class="icon" role="img" aria-hidden="true"><use href="/icons.svg#translate-icon"></use></svg></div>
</section>

<div class="ticks"></div>

<section id="center">
  <div class="hero">
    <img src="\${n}" class="base" width="170" height="179">
    <img src="\${e}" class="framework" alt="TypeScript logo"/>
    <img src="\${t}" class="vite" alt="Vite logo" />
  </div>
  <div>
    <h1>Empezar</h1>
    <p>Editar <!-- @zintl-ignore --> <code>src/main.ts</code> y guarda para probar <!-- @zintl-ignore --> <code>HMR</code></p>
  </div>
  <button id="counter" type="button" class="counter"></button>
</section>

<div class="ticks"></div>

<section id="next-steps">
  <div id="docs">
    <svg class="icon" role="presentation" aria-hidden="true"><use href="/icons.svg#documentation-icon"></use></svg>
    <h2>Documentación</h2>
    <p>Tus preguntas, respondidas</p>
    <ul>
      <li>
        <a href="https://vite.dev/" target="_blank">
          <img class="logo" src="\${t}" alt="" />
          Explorar Vite
        </a>
      </li>
      <li>
        <a href="https://www.typescriptlang.org" target="_blank">
          <img class="button-icon" src="\${e}" alt="">
          Leer más
        </a>
      </li>
    </ul>
  </div>
  <div id="social">
    <svg class="icon" role="presentation" aria-hidden="true"><use href="/icons.svg#social-icon"></use></svg>
    <h2>Conéctate con nosotros</h2>
    <p>Únete a la comunidad de Vite</p>
    <!-- @zintl-ignore -->
    <ul>
      <li><a href="https://github.com/vitejs/vite" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="/icons.svg#github-icon"></use></svg>GitHub</a></li>
      <li><a href="https://chat.vite.dev/" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="/icons.svg#discord-icon"></use></svg>Discord</a></li>
      <li><a href="https://x.com/vite_js" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="/icons.svg#x-icon"></use></svg>X.com</a></li>
      <li><a href="https://bsky.app/profile/vite.dev" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="/icons.svg#bluesky-icon"></use></svg>Bluesky</a></li>
    </ul>
  </div>
</section>

<div class="ticks"></div>
<section id="spacer"></section>
\`,r(document.querySelector(\`#counter\`)),i(document.querySelector(\`#switcher\`));"
`;

exports[`Example Proof: vanilla-spa-i18n-baked > should match Final Production Build (dist) snapshots > vanilla-spa-i18n-baked/dist/assets/modulepreload-polyfill-BxR_cmXS.js 1`] = `"(function(){let e=document.createElement(\`link\`).relList;if(e&&e.supports&&e.supports(\`modulepreload\`))return;for(let e of document.querySelectorAll(\`link[rel="modulepreload"]\`))n(e);new MutationObserver(e=>{for(let t of e)if(t.type===\`childList\`)for(let e of t.addedNodes)e.tagName===\`LINK\`&&e.rel===\`modulepreload\`&&n(e)}).observe(document,{childList:!0,subtree:!0});function t(e){let t={};return e.integrity&&(t.integrity=e.integrity),e.referrerPolicy&&(t.referrerPolicy=e.referrerPolicy),e.crossOrigin===\`use-credentials\`?t.credentials=\`include\`:e.crossOrigin===\`anonymous\`?t.credentials=\`omit\`:t.credentials=\`same-origin\`,t}function n(e){if(e.ep)return;e.ep=!0;let n=t(e);fetch(e.href,n)}})();"`;

exports[`Example Proof: vanilla-spa-i18n-baked > should match Final Production Build (dist) snapshots > vanilla-spa-i18n-baked/dist/assets/zh/index-D-ilckyM.js 1`] = `
"import"../modulepreload-polyfill-BxR_cmXS.js";var e=\`data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20aria-hidden='true'%20width='32'%20height='32'%20viewBox='0%200%20256%20256'%3e%3cpath%20fill='%23007ACC'%20d='M0%20128v128h256V0H0z'/%3e%3cpath%20fill='%23FFF'%20d='m56.612%20128.85l-.081%2010.483h33.32v94.68h23.568v-94.68h33.321v-10.28c0-5.69-.122-10.444-.284-10.566c-.122-.162-20.4-.244-44.983-.203l-44.74.122l-.121%2010.443Zm149.955-10.742c6.501%201.625%2011.459%204.51%2016.01%209.224c2.357%202.52%205.851%207.111%206.136%208.208c.08.325-11.053%207.802-17.798%2011.988c-.244.162-1.22-.894-2.317-2.52c-3.291-4.795-6.745-6.867-12.028-7.233c-7.76-.528-12.759%203.535-12.718%2010.321c0%201.992.284%203.17%201.097%204.795c1.707%203.536%204.876%205.649%2014.832%209.956c18.326%207.883%2026.168%2013.084%2031.045%2020.48c5.445%208.249%206.664%2021.415%202.966%2031.208c-4.063%2010.646-14.14%2017.879-28.323%2020.276c-4.388.772-14.79.65-19.504-.203c-10.28-1.828-20.033-6.908-26.047-13.572c-2.357-2.6-6.949-9.387-6.664-9.874c.122-.163%201.178-.813%202.356-1.504c1.138-.65%205.446-3.129%209.509-5.485l7.355-4.267l1.544%202.276c2.154%203.29%206.867%207.801%209.712%209.305c8.167%204.307%2019.383%203.698%2024.909-1.26c2.357-2.153%203.332-4.388%203.332-7.68c0-2.966-.366-4.266-1.91-6.501c-1.99-2.845-6.054-5.242-17.595-10.24c-13.206-5.69-18.895-9.224-24.096-14.832c-3.007-3.25-5.852-8.452-7.03-12.8c-.975-3.617-1.22-12.678-.447-16.335c2.723-12.76%2012.353-21.659%2026.25-24.3c4.51-.853%2014.994-.528%2019.424.569Z'/%3e%3c/svg%3e\`,t=\`/assets/vite-BF8QNONU.svg?zintl-multiplex=zh\`,n=\`/assets/hero-CLDdwZDr.png?zintl-multiplex=zh\`;function r(e){let t=0,n=n=>{t=n,e.innerHTML=\`计数为 \${t}\`};e.addEventListener(\`click\`,()=>n(t+1)),n(0)}function i(e){let t=window.location.pathname.split(\`/\`)[1]||\`en\`;e.innerHTML=[{id:\`en\`,name:\`English\`},{id:\`ar\`,name:\`العربية\`},{id:\`es\`,name:\`Español\`},{id:\`zh\`,name:\`中文\`}].map(e=>\`
    <button data-lang="\${e.id}" class="\${t===e.id?\`active\`:\`\`}">
      <a href="/\${e.id}/">\${e.name}</a>
    </button>
  \`).join(\`\`)}document.querySelector(\`#app\`).innerHTML=\`
<section id="header">
  <div id="switcher" class="switcher"></div>
  <div class="vertical-ticks"></div>
  <div class="icon-border"><svg class="icon" role="img" aria-hidden="true"><use href="/icons.svg#translate-icon"></use></svg></div>
</section>

<div class="ticks"></div>

<section id="center">
  <div class="hero">
    <img src="\${n}" class="base" width="170" height="179">
    <img src="\${e}" class="framework" alt="TypeScript logo"/>
    <img src="\${t}" class="vite" alt="Vite logo" />
  </div>
  <div>
    <h1>开始使用</h1>
    <p>编辑 <!-- @zintl-ignore --> <code>src/main.ts</code> 并保存以测试 <!-- @zintl-ignore --> <code>HMR</code></p>
  </div>
  <button id="counter" type="button" class="counter"></button>
</section>

<div class="ticks"></div>

<section id="next-steps">
  <div id="docs">
    <svg class="icon" role="presentation" aria-hidden="true"><use href="/icons.svg#documentation-icon"></use></svg>
    <h2>文档</h2>
    <p>你的问题，已有答案</p>
    <ul>
      <li>
        <a href="https://vite.dev/" target="_blank">
          <img class="logo" src="\${t}" alt="" />
          探索 Vite
        </a>
      </li>
      <li>
        <a href="https://www.typescriptlang.org" target="_blank">
          <img class="button-icon" src="\${e}" alt="">
          了解更多
        </a>
      </li>
    </ul>
  </div>
  <div id="social">
    <svg class="icon" role="presentation" aria-hidden="true"><use href="/icons.svg#social-icon"></use></svg>
    <h2>联系我们</h2>
    <p>加入 Vite 社区</p>
    <!-- @zintl-ignore -->
    <ul>
      <li><a href="https://github.com/vitejs/vite" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="/icons.svg#github-icon"></use></svg>GitHub</a></li>
      <li><a href="https://chat.vite.dev/" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="/icons.svg#discord-icon"></use></svg>Discord</a></li>
      <li><a href="https://x.com/vite_js" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="/icons.svg#x-icon"></use></svg>X.com</a></li>
      <li><a href="https://bsky.app/profile/vite.dev" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="/icons.svg#bluesky-icon"></use></svg>Bluesky</a></li>
    </ul>
  </div>
</section>

<div class="ticks"></div>
<section id="spacer"></section>
\`,r(document.querySelector(\`#counter\`)),i(document.querySelector(\`#switcher\`));"
`;

exports[`Example Proof: vanilla-spa-i18n-baked > should match Final Production Build (dist) snapshots > vanilla-spa-i18n-baked/dist/en/index.html 1`] = `
"<!doctype html>
<html lang="en" dir="ltr">
  <head>
    <meta charset="UTF-8" />
    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Zintl - Vanilla Baked I18n SPAs</title>
    <script type="module" crossorigin src="/assets/en/index-D1DIQBFy.js"></script>
    <link rel="modulepreload" crossorigin href="/assets/modulepreload-polyfill-BxR_cmXS.js">
    <link rel="stylesheet" crossorigin href="/assets/index-CDkl1zVr.css">
  </head>
  <body>
    <div id="app"></div>
  </body>
</html>
"
`;

exports[`Example Proof: vanilla-spa-i18n-baked > should match Final Production Build (dist) snapshots > vanilla-spa-i18n-baked/dist/es/index.html 1`] = `
"<!doctype html>
<html lang="es">
  <head>
    <meta charset="UTF-8" />
    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Zintl | ejemplo básico de aplicación de página única</title>
    <script type="module" crossorigin src="/assets/es/index-Bw8giZtc.js"></script>
    <link rel="modulepreload" crossorigin href="/assets/modulepreload-polyfill-BxR_cmXS.js">
    <link rel="stylesheet" crossorigin href="/assets/index-CDkl1zVr.css">
  </head>
  <body>
    <div id="app"></div>
  </body>
</html>
"
`;

exports[`Example Proof: vanilla-spa-i18n-baked > should match Final Production Build (dist) snapshots > vanilla-spa-i18n-baked/dist/index.html 1`] = `
"<!doctype html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Redirecting...</title>
    <script id="zintl-multiplex-redirect">
      (function() {
        try {
          const lang = (navigator.language || 'en').split('-')[0];
          const supported = ["en","ar","es","zh"];
          const target = supported.includes(lang) ? lang : 'en';
          window.location.replace('/' + target + '/');
        } catch (e) {
          window.location.replace('/en/');
        }
      })();
    </script>
  </head>
  <body>
  </body>
</html>"
`;

exports[`Example Proof: vanilla-spa-i18n-baked > should match Final Production Build (dist) snapshots > vanilla-spa-i18n-baked/dist/zh/index.html 1`] = `
"<!doctype html>
<html lang="zh" dir="ltr">
  <head>
    <meta charset="UTF-8" />
    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Zintl | 基础单页应用多语言示例</title>
    <script type="module" crossorigin src="/assets/zh/index-D-ilckyM.js"></script>
    <link rel="modulepreload" crossorigin href="/assets/modulepreload-polyfill-BxR_cmXS.js">
    <link rel="stylesheet" crossorigin href="/assets/index-CDkl1zVr.css">
  </head>
  <body>
    <div id="app"></div>
  </body>
</html>
"
`;

exports[`Example Proof: vanilla-spa-i18n-baked > should match Production snapshots (Baking) > vanilla-spa-i18n-baked/prod-transforms/index.html 1`] = `
"<!doctype html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Redirecting...</title>
    <script id="zintl-multiplex-redirect">
      (function() {
        try {
          const lang = (navigator.language || 'en').split('-')[0];
          const supported = ["en","ar","es","zh"];
          const target = supported.includes(lang) ? lang : 'en';
          window.location.replace('/' + target + '/');
        } catch (e) {
          window.location.replace('/en/');
        }
      })();
    </script>
  </head>
  <body>
  </body>
</html>"
`;

exports[`Example Proof: vanilla-spa-i18n-baked > should match Production snapshots (Baking) > vanilla-spa-i18n-baked/prod-transforms/src/counter.ts 1`] = `
"export function setupCounter(element: HTMLButtonElement) {
  let counter = 0;
  const setCounter = (count: number) => {
    counter = count;
    element.innerHTML = "Count is \${counter}";
  };
  element.addEventListener("click", () => setCounter(counter + 1));
  setCounter(0);
}"
`;

exports[`Example Proof: vanilla-spa-i18n-baked > should match Production snapshots (Baking) > vanilla-spa-i18n-baked/prod-transforms/src/main.ts 1`] = `
"import { loadI18nInstance } from "zintl/internal";
import _zintl_mgr_b_785c57fb4811 from "virtual:zintl/manager/none/entry:b_785c57fb4811";
import "./style.css";
import typescriptLogo from "./assets/typescript.svg";
import viteLogo from "./assets/vite.svg";
import heroImg from "./assets/hero.png";


import { setupCounter } from "./counter.ts";
import { setupSwitcher } from "./switcher.ts";

await loadI18nInstance({ loaders: { ["b_785c57fb4811"]: _zintl_mgr_b_785c57fb4811.loader } });
document.querySelector<HTMLDivElement>("#app")!.innerHTML = \`
<section id="header">
  <div id="switcher" class="switcher"></div>
  <div class="vertical-ticks"></div>
  <div class="icon-border"><svg class="icon" role="img" aria-hidden="true"><use href="/icons.svg#translate-icon"></use></svg></div>
</section>

<div class="ticks"></div>

<section id="center">
  <div class="hero">
    <img src="\${heroImg}" class="base" width="170" height="179">
    <img src="\${typescriptLogo}" class="framework" alt="TypeScript logo"/>
    <img src="\${viteLogo}" class="vite" alt="Vite logo" />
  </div>
  <div>
    <h1>Get started</h1>
    <p>Edit <!-- @zintl-ignore --> <code>src/main.ts</code> and save to test <!-- @zintl-ignore --> <code>HMR</code></p>
  </div>
  <button id="counter" type="button" class="counter"></button>
</section>

<div class="ticks"></div>

<section id="next-steps">
  <div id="docs">
    <svg class="icon" role="presentation" aria-hidden="true"><use href="/icons.svg#documentation-icon"></use></svg>
    <h2>Documentation</h2>
    <p>Your questions, answered</p>
    <ul>
      <li>
        <a href="https://vite.dev/" target="_blank">
          <img class="logo" src="\${viteLogo}" alt="" />
          Explore Vite
        </a>
      </li>
      <li>
        <a href="https://www.typescriptlang.org" target="_blank">
          <img class="button-icon" src="\${typescriptLogo}" alt="">
          Learn more
        </a>
      </li>
    </ul>
  </div>
  <div id="social">
    <svg class="icon" role="presentation" aria-hidden="true"><use href="/icons.svg#social-icon"></use></svg>
    <h2>Connect with us</h2>
    <p>Join the Vite community</p>
    <!-- @zintl-ignore -->
    <ul>
      <li><a href="https://github.com/vitejs/vite" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="/icons.svg#github-icon"></use></svg>GitHub</a></li>
      <li><a href="https://chat.vite.dev/" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="/icons.svg#discord-icon"></use></svg>Discord</a></li>
      <li><a href="https://x.com/vite_js" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="/icons.svg#x-icon"></use></svg>X.com</a></li>
      <li><a href="https://bsky.app/profile/vite.dev" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="/icons.svg#bluesky-icon"></use></svg>Bluesky</a></li>
    </ul>
  </div>
</section>

<div class="ticks"></div>
<section id="spacer"></section>
\`;

setupCounter(document.querySelector<HTMLButtonElement>("#counter")!);
setupSwitcher(document.querySelector<HTMLDivElement>("#switcher")!);"
`;

exports[`Example Proof: vanilla-spa-i18n-baked > should match Production snapshots (Baking) > vanilla-spa-i18n-baked/prod-transforms/src/switcher.ts 1`] = `
"export function setupSwitcher(element: HTMLElement) {
  const lang = (window.location.pathname.split("/")[1] as any) || "en";

  const locales = [
    { id: "en", name: "English" },
    { id: "ar", name: "العربية" },
    { id: "es", name: "Español" },
    { id: "zh", name: "中文" },
  ];

  element.innerHTML = locales
    .map(
      (l) => \`
    <button data-lang="\${l.id}" class="\${lang === l.id ? "active" : ""}">
      <a href="/\${l.id}/">\${l.name}</a>
    </button>
  \`,
    )
    .join("");

  // element.querySelectorAll("button").forEach((btn) => {
  //   btn.addEventListener("click", () => {
  //     const newLang = (btn as HTMLElement).dataset.lang!;
  //     window.history.pushState({}, "", \`/\${newLang}\`);
  //   });
  // });
}"
`;

exports[`Example Proof: vanilla-spa-i18n-baked > should match Production snapshots (Baking) > vanilla-spa-i18n-baked/prod-transforms/virtual:zintl/content/ar/entry:b_785c57fb4811 1`] = `
"export default {
    "b_785c57fb4811": {
      "90e40d50": "ابدأ الآن",
      "5301648d": "عدّل",
      "f7a53867": "واحفظ لاختبار",
      "9e9cf322": "وثائق",
      "d0f7666b": "إجابات لأسئلتك",
      "e49cb0ee": "استكشف Vite",
      "824d76b1": "تعرف على المزيد",
      "65ac13a7": "تواصل معنا",
      "15545bc4": "انضم إلى مجتمع Vite",
    },
    "b_f05b8e5701f3": {
      "3aaf6932": (params) => {
    const { counter } = params;
    return \`العدد هو \${params['counter']}\`;
  },
    },
  };"
`;

exports[`Example Proof: vanilla-spa-i18n-baked > should match Production snapshots (Baking) > vanilla-spa-i18n-baked/prod-transforms/virtual:zintl/content/es/entry:b_785c57fb4811 1`] = `
"export default {
    "b_785c57fb4811": {
      "90e40d50": "Empezar",
      "5301648d": "Editar",
      "f7a53867": "y guarda para probar",
      "9e9cf322": "Documentación",
      "d0f7666b": "Tus preguntas, respondidas",
      "e49cb0ee": "Explorar Vite",
      "824d76b1": "Leer más",
      "65ac13a7": "Conéctate con nosotros",
      "15545bc4": "Únete a la comunidad de Vite",
    },
    "b_f05b8e5701f3": {
      "3aaf6932": (params) => {
    const { counter } = params;
    return \`La cuenta es \${params['counter']}\`;
  },
    },
  };"
`;

exports[`Example Proof: vanilla-spa-i18n-baked > should match Production snapshots (Baking) > vanilla-spa-i18n-baked/prod-transforms/virtual:zintl/content/zh/entry:b_785c57fb4811 1`] = `
"export default {
    "b_785c57fb4811": {
      "90e40d50": "开始使用",
      "5301648d": "编辑",
      "f7a53867": "并保存以测试",
      "9e9cf322": "文档",
      "d0f7666b": "你的问题，已有答案",
      "e49cb0ee": "探索 Vite",
      "824d76b1": "了解更多",
      "65ac13a7": "联系我们",
      "15545bc4": "加入 Vite 社区",
    },
    "b_f05b8e5701f3": {
      "3aaf6932": (params) => {
    const { counter } = params;
    return \`计数为 \${params['counter']}\`;
  },
    },
  };"
`;

exports[`Example Proof: vanilla-spa-i18n-baked > should match Production snapshots (Baking) > vanilla-spa-i18n-baked/prod-transforms/virtual:zintl/manager/none/entry:b_785c57fb4811 1`] = `
"export default { id: "b_785c57fb4811", loader: (locale) => {
      switch(locale) { 
        case "en":
          return {
    "b_785c57fb4811": {
      "90e40d50": "Get started",
      "5301648d": "Edit",
      "f7a53867": "and save to test",
      "9e9cf322": "Documentation",
      "d0f7666b": "Your questions, answered",
      "e49cb0ee": "Explore Vite",
      "824d76b1": "Learn more",
      "65ac13a7": "Connect with us",
      "15545bc4": "Join the Vite community",
    },
    "b_f05b8e5701f3": {
      "3aaf6932": (params) => {
    const { counter } = params;
    return \`Count is \${params['counter']}\`;
  },
    },
  };
                case "ar":
          return import("virtual:zintl/content/ar/entry:b_785c57fb4811").then(m => m.default);
        case "es":
          return import("virtual:zintl/content/es/entry:b_785c57fb4811").then(m => m.default);
        case "zh":
          return import("virtual:zintl/content/zh/entry:b_785c57fb4811").then(m => m.default);
        default: return {};
      }
    } };"
`;
